# dreamreel

./: .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  README.md
.devproxy/: proxy.mjs
.github/workflows/: ci.yml  deploy.yml
app/: .gitignore  NOTICE  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/public/: _headers  manifest.seed.json
app/scripts/: check-licenses.mjs  gen-credits.mjs  gen-seed.mjs  validate-manifest.ts
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src/audio/: AudioPool.test.ts  AudioPool.ts  ducking.test.ts  ducking.ts  engine.ts  mixer.test.ts  mixer.ts  params.ts  synthCharacter.test.ts
app/src/dev/: Harness.tsx
app/src/dream/: audioCadence.test.ts  audioCadence.ts  audioWalker.test.ts  audioWalker.ts  coherence.ts  conductor.ts  dreamName.ts  dreamwalker.ts  filterCatalog.test.ts  filterDirector.ts  intensity.ts  layerPlan.ts  memory.test.ts  memory.ts  mood.ts  moodBias.ts  prng.ts  recurrence.test.ts  seedParams.ts  slotHold.ts  steering.test.ts  steering.ts  textDirector.ts  visualPool.ts
app/src/manifest/: archiveProxy.ts  attribution.ts  loader.ts  migrate.ts  schema.test.ts  schema.ts  types.ts
app/src/render/: ButterchurnLayer.ts  Compositor.ts  DreamFilter.ts  DreamLayerMaterial.ts  LayerStack.ts  SpriteField.ts  TransitionMaterial.ts  VideoPool.ts  dust.ts  filmParams.ts  flashGuard.ts  postfx.ts  procedural.ts  shaderNoise.ts  textureLoader.ts  transitions.ts  videoTexture.ts
app/src/state/: runtime.ts  store.ts  url.ts
app/src/styles/: index.css
app/src/types/: butterchurn.d.ts
app/src/ui/: Captions.tsx  Gate.tsx  ProjectorPanel.tsx  loop.ts  poster.ts
app/tests/e2e/: smoke.spec.ts  transitions-compile.spec.ts
app/tests/unit/: archiveProxy.test.ts  attribution.test.ts  audioParams.test.ts  coherence.test.ts  compositorVideo.test.ts  dreamFilter.test.ts  dreamLayerMaterial.test.ts  dreamName.test.ts  dreamwalker.test.ts  filmParams.test.ts  filterDirector.test.ts  flashGuard.test.ts  intensity.test.ts  layerFade.test.ts  layerPin.test.ts  layerPlan.test.ts  loop.test.ts  manifest.test.ts  memory.test.ts  migrate.test.ts  mood.test.ts  moodBias.test.ts  moshStrength.test.ts  poster.test.ts  prng.test.ts  seedParams.test.ts  slotHold.test.ts  spriteField.test.ts  store.test.ts  swapDynamics.test.ts  textDirector.test.ts  textureLoader.test.ts  throughline.test.ts  url.test.ts  videoPool.test.ts  videoTexture.test.ts  videoWeight.test.ts  visualPool.test.ts  wakeTransition.test.ts
docs/: AUDIT-2026-07-02.md  HANDOFF.md  RESEARCH-2026-07-02-making-dreamreel-better.md
docs/superpowers/plans/: 2026-06-17-dream-filter-catalog.md  2026-06-17-wake-chaos-engine.md  2026-06-18-uncanny-corpus.md  2026-06-22-round4-video.md  2026-06-22-round5-audio.md  2026-06-23-wake-pacing-restraint.md  2026-06-23-wake-polish-r4.md
docs/superpowers/specs/: 2026-06-17-dream-filter-catalog-design.md  2026-06-17-wake-chaos-engine-design.md  2026-06-18-uncanny-corpus-design.md  2026-06-22-round4-video-design.md  2026-06-22-round5-audio-design.md  2026-06-23-wake-pacing-restraint-design.md
infra/: wrangler.toml
pipeline/: .gitignore  Makefile  conftest.py  pyproject.toml
pipeline/audio/: add_tempo.py  build_audio.py  build_corpus.py  clap_backend.py  clap_transformers.py  granulate.py  ingest.py  ship_corpus.py  tempo.py  transcode_audio.py
pipeline/embed/: __init__.py  aesthetic.py  build_manifest.py  clip_backend.py  clip_window.py  colorize.py  curate.py  depth.py  download.py  embed_images.py  embed_texts.py  entities.py  flow.py  frame_selector.py  mood_axes.py  poetry.py  poster.py  reembed_siglip.py  remood_manifest.py  retime.py  semdedup.py  shots.py  siglip_backend.py  sprite_clips.py  sprite_track.py  sprites.py  textgen.py
pipeline/ingest/: __init__.py  archive_org.py  commons.py  licenses.py  loc.py  museums.py  normalize.py  openverse.py  run.py  themes.py  wellcome.py
pipeline/publish/: __init__.py  qc.py  repair_srcs.py  run.py  transcode.py  upload_r2.py
pipeline/scripts/: check_licenses.py
pipeline/tests/: test_aesthetic.py  test_audio_ingest.py  test_build_audio.py  test_build_manifest_video.py  test_carry_through.py  test_clap_backend.py  test_clip_window.py  test_colorize.py  test_commons.py  test_curate.py  test_curate_integration.py  test_curate_video.py  test_depth.py  test_download.py  test_download_videos.py  test_entities.py  test_flow.py  test_frame_selector.py  test_granulate.py  test_ingesters.py  test_licenses.py  test_loc.py  test_manifest_shape.py  test_no_copyleft_client.py  test_poetry.py  test_poster.py  test_publish.py  test_publish_audio.py  test_publish_video.py  test_reembed_siglip.py  test_remood_manifest.py  test_repair_srcs.py  test_retime.py  test_semdedup.py  test_shots.py  test_sprite_clips.py  test_sprite_track.py  test_sprites.py  test_tempo.py  test_textgen.py  (+3 more)
trackfx/: .gitignore  README.md  pyproject.toml  requirements.txt
trackfx/tests/: test_effects.py  test_masks.py  test_pipeline_roundtrip.py  test_registry.py  test_tracking.py  test_video_io.py
trackfx/trackfx/: __init__.py  cli.py  colors.py  detector.py  masks.py  pipeline.py  tracking.py  video_io.py
trackfx/trackfx/effects/: __init__.py  base.py  dream_gate.py  ghost_trail.py  glitch_resolve.py  tint.py
