[project]
name = "dreamreel-pipeline"
version = "0.1.0"
description = "DREAMREEL offline corpus pipeline: ingest -> embed -> publish"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "requests>=2.31",
  "Pillow>=10.2",
  "numpy>=1.26",
]

# Heavy / optional extras are lazily imported so the license + manifest tests run without them.
[project.optional-dependencies]
embed = ["open_clip_torch>=2.24", "torch>=2.2", "img2dataset>=1.45", "transformers>=4.49", "Pillow>=10.2"]
publish = ["boto3>=1.34", "imagehash>=4.3"]
# Offline rhythmic analysis of audio clips (tempo + energy). librosa is ISC; soundfile is BSD.
audio = ["librosa>=0.10", "soundfile>=0.12"]
dev = ["pytest>=8.0", "mypy>=1.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingest", "embed", "publish"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
