[project]
name = "dreamreel-pipeline"
version = "0.1.0"
description = "DREAMREEL offline corpus pipeline: ingest -> embed -> publish"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "requests>=2.31",
  "Pillow>=10.2",
  "numpy>=1.26",
]

# Heavy / optional extras are lazily imported so the license + manifest tests run without them.
[project.optional-dependencies]
embed = ["open_clip_torch>=2.24", "torch>=2.2", "img2dataset>=1.45", "transformers>=4.49", "Pillow>=10.2"]
publish = ["boto3>=1.34", "imagehash>=4.3"]
# Offline rhythmic analysis of audio clips (tempo + energy). librosa is ISC; soundfile is BSD.
audio = ["librosa>=0.10", "soundfile>=0.12"]
# Offline shot detection for video assets (montage grammar). PySceneDetect is BSD-3; opencv Apache-2.0.
video = ["scenedetect[opencv]>=0.6"]
# Offline entity-cutout extraction (literal motif recurrence). Grounding DINO + SAM 2 via
# transformers — both Apache-2.0 (code + weights).
sprites = ["transformers>=4.49", "torch>=2.2", "Pillow>=10.2"]
# Offline per-still depth baking (2.5D parallax, embed/depth.py). Depth Anything V2 SMALL only —
# the sole Apache-2.0 checkpoint; the Base/Large/Giant weights are CC-BY-NC and barred.
depth = ["transformers>=4.49", "torch>=2.2", "Pillow>=10.2"]
# Offline clip colorization (the "dream turns to color" moment, embed/colorize.py). DeOldify is
# MIT for BOTH code and pretrained weights (ship-safe); the repo is archived (Oct 2024, frozen but
# usable) and needs Linux + a GPU (4GB+) + the fastai/PyTorch stack. Pipeline-only, never runtime.
colorize = ["deoldify", "fastai>=1.0", "torch>=2.2", "Pillow>=10.2"]
# Offline per-video optical-flow baking (embed/flow.py). RAFT-Small via torchvision — torchvision
# is BSD-3 and distributes the RAFT weights itself (Raft_Small_Weights.DEFAULT); ship-safe.
flow = ["torch>=2.2", "torchvision>=0.17", "Pillow>=10.2"]
# Track-based entity cutouts (embed/sprite_track.py) via the sibling `trackfx` package
# (torchvision Mask R-CNN + supervision ByteTrack). trackfx isn't on PyPI — it lives in
# this repo — so also install it editable alongside these deps:  pip install -e ../trackfx
# torchvision Mask R-CNN code+weights are BSD-3; supervision is MIT — both ship-safe.
track = ["torch>=2.2", "torchvision>=0.17", "supervision>=0.27.0,<0.30.0", "Pillow>=10.2"]
# Offline entity recognition (the dream memory index). RAM++ (recognize-anything) is Apache-2.0,
# code + weights; not on PyPI, so install from git. Pulls torch + timm + the checkpoint via hf_hub.
# (A compat shim in entities._make_ram lets it run against transformers 5.x — see that function.)
entities = [
  "recognize-anything @ git+https://github.com/xinyu1205/recognize-anything.git",
  "timm>=0.9",
  "huggingface_hub>=0.20",
  "fairscale>=0.4",
]
dev = ["pytest>=8.0", "mypy>=1.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ingest", "embed", "publish"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
